--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Joshkaki00/js-string-lib"
+  },
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
