--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,30 @@
 {
   "env": {
     "browser": true,
-    "es2021": true,
+    "commonjs": true,
+    "es6": true,
     "node": true,
     "jest": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "rules": {
+    "no-console": "warn",
+    "no-unused-vars": "warn",
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.ts"],
+      "parser": "@typescript-eslint/parser",
+      "plugins": ["@typescript-eslint"],
+      "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"]
+    }
+  ]
 } 
