--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "build": "rollup -c",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src/**/*.js",
-    "format": "prettier --write 'src/**/*.js'",
+    "lint": "eslint src/**/*.{js,ts}",
+    "format": "prettier --write 'src/**/*.{js,ts}'",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint"
+    "prepublishOnly": "npm test && npm run lint",
+    "typecheck": "tsc --noEmit",
+    "cleanup": "node scripts/cleanup.js"
   },
   "keywords": [
     "string",
@@ -34,13 +36,18 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "@types/jest": "^27.5.2",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "rollup": "^2.56.3",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.8.1",
+    "typescript": "^4.9.5"
   }
 }
