--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "typecheck": "tsc --noEmit",
-    "cleanup": "node scripts/cleanup.js"
+    "cleanup": "node scripts/cleanup.js",
+    "demo": "ts-node demo.ts"
   },
   "keywords": [
     "string",
@@ -47,7 +48,9 @@
     "prettier": "^2.3.2",
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
+    "tsx": "^4.19.4",
     "typescript": "^4.9.5"
   }
 }
