--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "^2.3.2",
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^27.1.5",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "tsx": "^4.19.4",
